--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -148,35 +148,32 @@ html {
   flex-wrap: wrap;
   justify-content: center; }
 
-.searchedGIF {
+.GIF {
   margin: 5px 5px; }
 
-.IconContainer {
-  position: relative;
+.pageButtonContainer {
   display: flex;
-  justify-content: space-between;
-  width: 55px;
-  bottom: 85%;
-  right: 0px; }
+  justify-content: space-around; }
 
-.IconContainer .fa {
-  font-size: 26px; }
-
-.pageButtons {
-  width: 35%;
+.pageButton {
+  width: 120px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-content: center;
   margin: 0 auto;
   margin-bottom: 20px; }
 
-.pageButtons button {
-  background: none;
-  border: 1px solid #7D1935;
-  padding: 2px 15px; }
+.pageButton button {
+  width: 40px;
+  background: #4A96AD;
+  border: 1px solid white;
+  padding: 2px 10%;
+  display: flex;
+  justify-content: center; }
 
-.pageButtons button i {
+.pageButton button i {
   font-size: 30px;
-  color: #7D1935; }
+  color: white; }
 
 header {
   background: #7D1935;
@@ -186,6 +183,27 @@ header .wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between; }
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  background: #4A96AD;
+  color: #F5F3EE;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  box-shadow: 2px 2px 5px #888888; }
+
+nav button {
+  padding: 10px 40px;
+  border: none;
+  background: none;
+  color: #F5F3EE; }
+  nav button:hover {
+    background-color: #7D1935; }
+
+nav form {
+  color: #F5F3EE; }
 
 .user {
   display: flex;
