--- a/dev/styles/partials/_moreInfo.scss
+++ b/dev/styles/partials/_moreInfo.scss
@@ -14,6 +14,10 @@
 .moreInfoContainer{
     background: $thirdBrandColor;
     padding: 20px;
+    padding-top: 10px;
+    min-width: 400px;
+    box-shadow: 2px 2px 5px #545454;
+    border-radius: 5px;
 }
 
 .Icon {
