--- a/dev/styles/partials/_global.scss
+++ b/dev/styles/partials/_global.scss
@@ -2,19 +2,25 @@ html {
 	font-size: $htmlFontSize;
     font-family: 'Exo 2', sans-serif;
     color: $primaryBrandColor;
-    background: $thirdBrandColor;
+    background: white;
 }
 
 .wrapper {
     max-width: 1100px;
     width: 90%;
     margin: 0 auto;
+    @include respond-to ('small') {
+		width: 98%;
+	}
 }
 
 .results {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background: $thirdBrandColor;
+    border: 2px solid $primaryBrandColor;
+    padding: 20px 0px;
 }
 
 .GIF{
@@ -24,6 +30,7 @@ html {
 .pageButtonContainer {
     display: flex;
     justify-content: space-around;
+    margin-top: 40px;
 }
 
 .pageButton {
@@ -53,3 +60,22 @@ html {
     color: white;
 }
 
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid $primaryBrandColor; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    margin: 0 auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.APIcallType {
+    margin-top: 0;
+}
