--- a/dev/styles/partials/_header.scss
+++ b/dev/styles/partials/_header.scss
@@ -11,6 +11,7 @@ header .wrapper {
 
 nav {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   background: $secondaryBrandColor;
   color: $thirdBrandColor;
@@ -18,6 +19,9 @@ nav {
   margin-top: 10px;
   margin-bottom: 10px;
   box-shadow: 2px 2px 5px #888888;
+  @include respond-to ('medium') {
+		
+	}
 }
 
 nav label {
