--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -136,24 +136,31 @@ html {
   font-size: 16px;
   font-family: 'Exo 2', sans-serif;
   color: #7D1935;
-  background: #F5F3EE; }
+  background: white; }
 
 .wrapper {
   max-width: 1100px;
   width: 90%;
   margin: 0 auto; }
+  @media (max-width: 650px) {
+    .wrapper {
+      width: 98%; } }
 
 .results {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; }
+  justify-content: center;
+  background: #F5F3EE;
+  border: 2px solid #7D1935;
+  padding: 20px 0px; }
 
 .GIF {
   margin: 5px 5px; }
 
 .pageButtonContainer {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+  margin-top: 40px; }
 
 .pageButton {
   width: 120px;
@@ -178,6 +185,26 @@ html {
   font-size: 30px;
   color: white; }
 
+.loader {
+  border: 16px solid #f3f3f3;
+  /* Light grey */
+  border-top: 16px solid #7D1935;
+  /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto; }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+
+.APIcallType {
+  margin-top: 0; }
+
 header {
   background: #7D1935;
   color: #F5F3EE; }
@@ -189,6 +216,7 @@ header .wrapper {
 
 nav {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   background: #4A96AD;
   color: #F5F3EE;
@@ -275,7 +303,9 @@ nav form {
 .error {
   display: flex;
   justify-content: center;
-  align-content: center; }
+  align-content: center;
+  background: #F5F3EE;
+  border: 2px solid #7D1935; }
 
 .ErrorMessage {
   width: 60%;
