--- a/dev/styles/partials/_global.scss
+++ b/dev/styles/partials/_global.scss
@@ -14,6 +14,16 @@ html {
 	}
 }
 
+img {
+    max-width: 100%;
+}
+
+button {
+    &:focus{
+		outline: 0
+	}
+}
+
 .results {
     display: flex;
     flex-wrap: wrap;
