--- a/dev/styles/partials/_moreInfo.scss
+++ b/dev/styles/partials/_moreInfo.scss
@@ -13,6 +13,7 @@
 
 .moreInfoContainer{
     background: $thirdBrandColor;
+    border: 2px solid $primaryBrandColor;
     padding: 20px;
     padding-top: 10px;
     min-width: 400px;
@@ -48,3 +49,16 @@
 .rated {
     background: red;
 }
+
+.likeButton {
+    background: $primaryBrandColor;
+    border: 1px solid white;
+    padding: 10px 20px;
+    color: white;
+    box-shadow: 1px 1px 5px #545454;
+    transition: 0.1s ease-in;
+    &:hover{
+        background: $secondaryBrandColor;
+        border-radius: 15px;
+    }
+} 
