--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -153,12 +153,15 @@ button:focus {
   outline: 0; }
 
 .results {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   background: #F5F3EE;
   border: 2px solid #7D1935;
-  padding: 20px 0px; }
+  padding: 20px 20px; }
+
+.GIFsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center; }
 
 .GIF {
   margin: 5px 5px; }
@@ -171,10 +174,20 @@ button:focus {
 .pageButton {
   width: 120px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-content: center;
   margin: 0 auto;
   margin-bottom: 20px; }
+
+.pageButton:nth-of-type(1) {
+  align-items: flex-end; }
+
+.align {
+  align-items: flex-start; }
+
+.pageButton:nth-of-type(2) {
+  align-items: flex-start; }
 
 .pageButton button {
   width: 40px;
@@ -182,10 +195,12 @@ button:focus {
   border: 1px solid white;
   padding: 2px 10%;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  transition: 0.1s ease-in; }
   .pageButton button:hover {
+    border-radius: 15px;
     background: #7D1935;
-    border: 1px solid #4A96AD; }
+    border: 1px solid white; }
 
 .pageButton button i {
   font-size: 30px;
@@ -241,13 +256,18 @@ nav button {
   background: none;
   color: #F5F3EE; }
   nav button:hover {
-    background-color: #7D1935; }
+    color: #7D1935; }
 
 #search {
   padding: 10px; }
 
 nav form {
   color: #F5F3EE; }
+  nav form:focus + label {
+    color: #7D1935; }
+
+nav form input:focus label {
+  color: #7D1935; }
 
 .user {
   display: flex;
@@ -281,6 +301,7 @@ nav form {
 
 .moreInfoContainer {
   background: #F5F3EE;
+  border: 2px solid #7D1935;
   padding: 20px;
   padding-top: 10px;
   min-width: 400px;
@@ -309,6 +330,17 @@ nav form {
 
 .rated {
   background: red; }
+
+.likeButton {
+  background: #7D1935;
+  border: 1px solid white;
+  padding: 10px 20px;
+  color: white;
+  box-shadow: 1px 1px 5px #545454;
+  transition: 0.1s ease-in; }
+  .likeButton:hover {
+    background: #4A96AD;
+    border-radius: 15px; }
 
 .error {
   display: flex;
