--- a/dev/styles/partials/_header.scss
+++ b/dev/styles/partials/_header.scss
@@ -2,6 +2,7 @@ header {
   background: $primaryBrandColor;
   color: $thirdBrandColor;
   padding: 0 10px;
+  margin-bottom: 25px;
 }
 
 header .wrapper {
