--- a/dev/styles/partials/_global.scss
+++ b/dev/styles/partials/_global.scss
@@ -14,6 +14,17 @@ html {
 	}
 }
 
+h1 {
+    font-family: 'Cairo', sans-serif;
+    font-weight: 700;
+    margin: 0;
+    font-size: 3.5em;
+}
+
+h2 {
+    font-family: 'Cairo', sans-serif;
+}
+
 img {
     max-width: 100%;
 }
@@ -22,6 +33,14 @@ button {
     &:focus{
 		outline: 0
 	}
+}
+
+.trending, .searchedGIFs, .topGIFs {
+    min-height: 53vh;
+}
+
+nav input {
+    padding: 2px 4px;
 }
 
 .results {
@@ -44,7 +63,7 @@ button {
 .pageButtonContainer {
     display: flex;
     justify-content: space-around;
-    margin-top: 40px;
+    margin-top: 30px;
 }
 
 .pageButton {
@@ -57,7 +76,6 @@ button {
     margin-bottom: 20px;
 
 }
-
 
 .pageButton:nth-of-type(1){
     align-items: flex-end;
@@ -107,5 +125,20 @@ button {
 }
 
 .APIcallType {
-    margin-top: 0;
+    text-align: center;
+}
+
+.APIcallType h2 {
+    font-size: 2em;
+    margin: 0;
+    margin-bottom: 35px;
+} 
+
+.page {
+   margin-top: -25px;
+   margin-bottom: 20px;
+} 
+
+.topGIFs .APIcallType {
+    margin: 20px 0;
 }
