--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -2,6 +2,7 @@
 @import "partials/mixins";
 @import "partials/variables";
 @import "partials/global";
+@import "partials/welcome";
 @import "partials/header";
 @import "partials/moreInfo";
 @import "partials/error";
