--- a/dev/styles/partials/_global.scss
+++ b/dev/styles/partials/_global.scss
@@ -51,6 +51,7 @@ nav input {
     padding: 20px 20px;
 }
 
+
 // DisplayGIFs.js 
 .GIFsContainer {
     display: flex;
@@ -69,6 +70,9 @@ nav input {
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
+    @include respond-to ('small'){
+        margin-bottom: 30px;
+    }
 }
 
 // ...
@@ -143,6 +147,13 @@ nav input {
     margin: 0;
     margin-bottom: 35px;
 } 
+
+.trending .APIcallType h2 {
+    @include respond-to ('small'){
+        margin: 0 10px;
+        margin-bottom: 35px;
+    }
+}
 
 // ...
 .page {
